added save and load API keys functionality OpenAI Anthropic

--- a/.gitignore
+++ b/.gitignore
@@ -122,3 +122,6 @@ tallmesh/
 
 # testing folders
 /qualitative_analysis
+
+# API keys JSON - using to save time in dev, absolutely not for deployment
+api_keys.json 
