--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 altair==5.3.0
+altgraph==0.17.4
 annotated-types==0.7.0
 anthropic==0.31.2
 anyio==4.4.0
@@ -22,10 +23,10 @@ configobj==5.0.8
 configparser==7.1.0
 contourpy==1.2.1
 cryptography==43.0.0
+cx_Logging==3.2.0
 cycler==0.12.1
 decorator==5.1.1
 distro==1.9.0
-docx==0.2.4
 docx2txt==0.8
 ebcdic==1.1.1
 etelemetry==0.3.1
@@ -55,6 +56,7 @@ jsonpickle==3.2.2
 jsonschema==4.23.0
 jsonschema-specifications==2023.12.1
 kiwisolver==1.4.5
+lief==0.15.1
 looseversion==1.3.0
 lxml==5.3.0
 markdown-it-py==3.0.0
@@ -73,8 +75,8 @@ openai==1.37.0
 packaging==24.1
 pandas==2.2.2
 parso==0.8.4
-pathlib==1.0.1
 pdfminer.six==20191110
+pefile==2024.8.26
 pillow==10.4.0
 plotly==5.22.0
 portalocker==2.10.1
@@ -90,15 +92,19 @@ pydantic_core==2.20.1
 pydeck==0.9.1
 pydot==3.0.1
 Pygments==2.18.0
+pyinstaller==6.10.0
+pyinstaller-hooks-contrib==2024.8
 PyJWT==2.8.0
 PyMuPDF==1.24.9
 PyMuPDFb==1.24.9
 pyparsing==3.1.2
 python-dateutil==2.9.0.post0
+python-docx==1.1.2
 python-pptx==0.6.23
 pytz==2024.1
 pyvis==0.3.2
 pywin32==306
+pywin32-ctypes==0.2.3
 pyxnat==1.6.2
 PyYAML==6.0.1
 rdflib==6.3.2
@@ -117,10 +123,12 @@ SpeechRecognition==3.8.1
 st-ant-tree==0.0.12
 stack-data==0.6.3
 streamlit==1.36.0
+striprtf==0.0.26
 tenacity==8.5.0
 textract==1.6.5
 tokenizers==0.19.1
 toml==0.10.2
+tomli==2.0.1
 toolz==0.12.1
 tornado==6.4.1
 tqdm==4.66.4
