--- a/requirements.txt
+++ b/requirements.txt
@@ -55,6 +55,7 @@ jiter==0.5.0
 jsonpickle==3.2.2
 jsonschema==4.23.0
 jsonschema-specifications==2023.12.1
+kaleido==0.2.1
 kiwisolver==1.4.5
 lief==0.15.1
 looseversion==1.3.0
