--- a/requirements.txt
+++ b/requirements.txt
@@ -104,6 +104,8 @@ python-docx==1.1.2
 python-pptx==0.6.23
 pytz==2024.1
 pyvis==0.3.2
+pywin32==306
+pywin32-ctypes==0.2.3
 pyxnat==1.6.2
 PyYAML==6.0.1
 rdflib==6.3.2
@@ -113,7 +115,7 @@ rich==13.7.1
 rpds-py==0.19.0
 scipy==1.14.0
 simplejson==3.19.3
-six==1.12.0
+six==1.16.0
 smmap==5.0.1
 sniffio==1.3.1
 sortedcontainers==2.4.0
