--- a/requirements.txt
+++ b/requirements.txt
@@ -1,139 +1,77 @@
-altair==5.3.0
-altgraph==0.17.4
+altair==5.5.0
 annotated-types==0.7.0
-#anthropic==0.31.2
-anyio==4.4.0
-argcomplete==1.10.3
-asttokens==2.4.1
-attrs==23.2.0
-azure-core==1.30.2
-azure-identity==1.17.1
-beautifulsoup4==4.8.2
-blinker==1.8.2
-cachetools==5.4.0
-certifi==2024.7.4
-cffi==1.16.0
-chardet==3.0.4
-charset-normalizer==3.3.2
-ci-info==0.3.0
-click==8.1.7
+anyio==4.9.0
+asttokens==3.0.0
+attrs==25.3.0
+blinker==1.9.0
+cachetools==5.5.2
+certifi==2025.1.31
+cffi==1.17.1
+chardet==5.2.0
+charset-normalizer==3.4.1
+click==8.1.8
 colorama==0.4.6
-compressed-rtf==1.0.6
-configobj==5.0.8
-configparser==7.1.0
-contourpy==1.2.1
-cryptography==43.0.0
-cycler==0.12.1
-decorator==5.1.1
+decorator==5.2.1
 distro==1.9.0
-docx2txt==0.8
-ebcdic==1.1.1
-etelemetry==0.3.1
-exceptiongroup==1.2.2
-executing==2.0.1
-extract-msg==0.28.7
-filelock==3.15.4
-fitz==0.0.1.dev2
-fonttools==4.53.1
-fsspec==2024.6.1
-gitdb==4.0.11
-GitPython==3.1.43
+executing==2.2.0
+gitdb==4.0.12
+GitPython==3.1.44
 graphviz==0.20.3
 h11==0.14.0
-httpcore==1.0.5
-httplib2==0.22.0
-httpx==0.27.0
-huggingface-hub==0.24.2
-idna==3.7
-IMAPClient==2.1.0
-ipython==8.26.0
-isodate==0.6.1
-jedi==0.19.1
-Jinja2==3.1.4
-jiter==0.5.0
-jsonpickle==3.2.2
+httpcore==1.0.7
+httpx==0.28.1
+idna==3.10
+ipython==9.0.2
+ipython_pygments_lexers==1.1.1
+jedi==0.19.2
+Jinja2==3.1.6
+jiter==0.9.0
+jsonpickle==4.0.2
 jsonschema==4.23.0
-jsonschema-specifications==2023.12.1
-kaleido==0.2.1
-kiwisolver==1.4.5
-lief==0.15.1
-looseversion==1.3.0
-lxml==5.3.0
-markdown-it-py==3.0.0
-MarkupSafe==2.1.5
-matplotlib==3.10.1
+jsonschema-specifications==2024.10.1
+lxml==5.3.1
+MarkupSafe==3.0.2
 matplotlib-inline==0.1.7
-mdurl==0.1.2
-msal==1.30.0
-msal-extensions==1.2.0
-networkx==3.3
-nibabel==5.2.1
-numpy==2.0.1
-olefile==0.47
-openai==1.37.0
-packaging==24.1
-pandas==2.2.2
+narwhals==1.31.0
+networkx==3.4.2
+numpy==2.2.4
+openai==1.68.0
+packaging==24.2
+pandas==2.2.3
 parso==0.8.4
-pathlib==1.0.1
-pdfminer.six==20191110
-pefile==2024.8.26
-pillow==10.4.0
-plotly==5.22.0
-portalocker==2.10.1
-prompt_toolkit==3.0.47
-protobuf==5.27.2
-prov==2.0.1
+pillow==11.1.0
+plotly==6.0.1
+prompt_toolkit==3.0.50
+protobuf==5.29.4
 pure_eval==0.2.3
-pyarrow==17.0.0
+pyarrow==19.0.1
 pycparser==2.22
-pycryptodome==3.20.0
-pydantic==2.8.2
-pydantic_core==2.20.1
+pydantic==2.10.6
+pydantic_core==2.27.2
 pydeck==0.9.1
-pydot==3.0.1
-Pygments==2.18.0
-pyinstaller==6.10.0
-pyinstaller-hooks-contrib==2024.8
-PyJWT==2.8.0
+Pygments==2.19.1
 PyMuPDF==1.25.4
-PyMuPDFb==1.24.10
-pyparsing==3.1.2
 python-dateutil==2.9.0.post0
 python-docx==1.1.2
-python-pptx==0.6.23
-pytz==2024.1
+pytz==2025.1
 pyvis==0.3.2
-pyxnat==1.6.2
-PyYAML==6.0.1
-rdflib==6.3.2
-referencing==0.35.1
+referencing==0.36.2
 requests==2.32.3
-rich==13.7.1
-rpds-py==0.19.0
-scipy==1.14.0
-simplejson==3.19.3
-six==1.16.0
-smmap==5.0.1
+rpds-py==0.23.1
+six==1.17.0
+smmap==5.0.2
 sniffio==1.3.1
-sortedcontainers==2.4.0
-soupsieve==2.5
-SpeechRecognition==3.8.1
-st-ant-tree==0.0.12
+sounddevice==0.5.1
 stack-data==0.6.3
-streamlit==1.38.0
-striprtf==0.0.26
-tenacity==8.5.0
-tokenizers==0.19.1
+streamlit==1.43.2
+striprtf==0.0.28
+tenacity==9.0.0
 toml==0.10.2
-tomli==2.0.1
-toolz==0.12.1
-tornado==6.4.1
-tqdm==4.66.4
+tornado==6.4.2
+tqdm==4.67.1
+traitlets==5.14.3
 typing_extensions==4.12.2
-tzdata==2024.1
-tzlocal==5.2
-urllib3==2.2.2
-watchdog==4.0.1
+tzdata==2025.1
+urllib3==2.3.0
+watchdog==6.0.0
 wcwidth==0.2.13
-xlrd==1.2.0
-XlsxWriter==3.2.0
