Updated initial coding to use a blablador model
Initial coding now can make a call to the Blablador LLM API.
It uses the "alias-large" when making a call, but also has an option to use the llama3 model however this is not functioning as intended

--- a/.gitignore
+++ b/.gitignore
@@ -129,3 +129,6 @@ top10/
 api_keys.json 
 azure_settings.json
 custom_prompts.json
+
+# adding to ignore list - Ari Thomson
+blablador_setting.json
